[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm-clock-cli"
version = "0.1.1"
description = "A Python CLI alarm clock"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["alarm", "clock", "cli", "terminal", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
alarm-clock = "alarm_clock.cli:run"
